--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Price Probe</title>
     <base href="/">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400,700&amp;amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
     <app-root>App is loading ...</app-root>
